fixed bug that disallowed jumping if previous game ended in collision

--- a/styles/scss/components/_char.scss
+++ b/styles/scss/components/_char.scss
@@ -36,9 +36,9 @@ main {
     left: 100%;
     width: 0;
     height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 75px solid $secondaryColor;      // $black   
+    border-left: 3.8vw solid transparent;
+    border-right: 3.8vw solid transparent;
+    border-bottom: 5.2vw solid $secondaryColor;      // $black   
 
 }
 
